<resources>
    <string name="app_name">GuiApp</string>
    <string name="btnDescrip"> </string>
    <string name="label_a"> Cuestionario </string>
    <string name="label_b"> Respuestas </string>
    <string name="label_c"> Mapa </string>
    <string name="labelCategorias"> Categorías </string>
    <string name="labelApoyo"> Apoyo </string>
    <string name="labelContacto"> Contacto </string>

    <!-- Mensaje de ayuda o explicativos  -->

    <string name="labelInformacionApoyo"> Este apartado te resumo los tipos de métodos para aprender, sabemos que usamos nuestra memoria para entender y retener información, es importante para tu examen puedas usar todas las herramientas necesarias por la cantidad de información que se estudia. Se agradece atemano al canal de Youtube por su resumen https://www.youtube.com/watch?v=JysHlMS_Vjs  </string>
    <string name="labelInformacionContacto"> En este apartado podras ayudar a la comunidad mandando sugerencias, observaciones o incluso si deseas agregar alguna pregunta que no este en este cuestionario, la información que nos suministres, será validada y nuestro equipo la validará y la anexara a la herramienta. </string>


    <!-- Label Interfaz Apoyo -->

    <!-- Titulos Tips Apoyo  -->
    <string name="labelCaso1"> Método Repetición Espaciada </string>
    <string name="labelCaso2"> Método De Comprensión </string>
    <string name="labelCaso3"> Método De Prioridad </string>
    <string name="labelCaso4"> Método De Posición Cereal </string>
    <string name="labelCaso5"> Método De Interferencia </string>
    <string name="labelCaso6"> Método De Los Opuestos </string>
    <string name="labelCaso7"> Video Informativo. </string>

    <!-- Parrafo Tips Apoyo  -->
    <string name="parrafoTipsApoyo1">Es el método que permite aprender de manera rápida, pero debes ser constante debido qué el cerebro borra al final del día, todo aquello que no necesitamos. Se recomienda repasar en intervalos de 1 lección 15 min, descanso de 10 min, Luego repite el Estudio por un tiempo de 30 min.</string>
    <string name="parrafoTipsApoyo2">Permite lograr una mayor retención, pero se debe realizar el esfuerzo en comprender el problema, debes asociar y leer toda la información para crear una comprensión con  tus propias palabras es decir tu reflexión de los hechos, podras usar la imaginación para recrear historias y eventos, es el método más popular..</string>
    <string name="parrafoTipsApoyo3">Con este método tú serás el organizador de tus estudios, podras darle prioridad de aprender lo más fácil y dejar de último lo más difícil, tu dirección es saber que necesitas aprender y memorizar.</string>
    <string name="parrafoTipsApoyo4">Este método consiste en organizar lo que necesitas aprender y de memorizarla en orden, se sugiere el uso de fichas, es cereal porque tú estableces el orden de las fichas, podrás colocarla arriba, abajo, delante, arás. Tu cerebro generará un patrón facilitando el aprendizaje.</string>
    <string name="parrafoTipsApoyo5">Como su nombre lo indica interfiere intencionalmente tu rutina de estudios, es decir si estudiaste 20 minutos, relajate con otra actividad luego vuelve a repasar otros 20 minutos, el cerebro entra en su estado de relajación podras retener más información. Es un método muy dinámico algo complejo pero no imposible de realizar, ponte retos y premiate por cada avance que logres.</string>
    <string name="parrafoTipsApoyo6">Permite memorizar estudiando dos temas diferentes u opuestos, logrando la asociación entre opuestos. Si olvidas un tema recordaras el otro tema, muy usado por los estudiantes de medicina en su aprendizaje. </string>


    <!-- Label Interfaz Contacto -->

    <!-- Titulos Campos Formulario   -->
    <string name="labelTituloContacto"> Datos para enviar correo:   </string>
    <string name="labelNombreContacto"> Tu  Nombre:   </string>
    <string name="labelCorreoContacto"> Tu Correo: </string>
    <string name="labelAsuntoContacto"> Asunto:  </string>
    <string name="labelMsjContacto"> Mensaje:  </string>
    <string name="textBtnContacto"> Enviar Correo  </string>


    <!-- Label Interfaz Niveles  -->
    <string name="labelTituloNiveles"> Niveles </string>


    <!-- Label Interfaz Reto al Saber  -->
    <string name="labelTituloRetoSaber"> Si Sabes. </string>
    <string name="labelPreguntaDesp"> Cargando pregunta ... </string>
    <string name="labelBtns"> Calificar </string>
    <string name="labelBtns_aprobado"> Aprobada </string>
    <string name="labelBtns_reprobado"> !! Chalee !!  </string>
    <string name="labelBtns_continuar"> Continuar  </string>

    <string name="labelTextAprobado"> !!Chido!! Culminaste exitosamente este nivel. </string>
    <string name="labelTextReprobado"> !!Chale!! Te falto poco, sigue intentando y lo conseguiras. </string>

    <!-- Label Interfaz Cuestionario  -->
    <string name="labelTituloCuestionario"> Cuestionario </string>
    <string name="labelNivel"> Estadísticas de aciertos en este nivel.  </string>
    <string name="labelResulBuenas"> Aprobada </string>
    <string name="labelResulVistas"> Preguntas </string>
    <string name="labelResulMalas">  Reprobada </string>
    <string name="labelMsjResulMal">  !!Ánimo!! tienes un total de aciertos muy bajo, podemos seguir estudiando y lo lograras. </string>
    <string name="labelMsjResulBien">  En hora buena, ya te sabes este nivel muy bien, vamos a probar con el siguiente!</string>

    <!-- Label Interfaz Estadisticas  -->
    <string name="labelTituloCorreo"> Notificar por Correo diariamente. </string>
    <string name="labelTituloNotificar"> Activar la notificación movil. </string>
    <string name="labelTituloRecordatorio"> Configurar recordatorio. </string>

    <string name="tabEstaditicas"> Estadísticas </string>
    <string name="tabConfiguracion"> Configuración </string>
    <string name="tabOtros"> Extras </string>


    <!-- Label Interfaz Mapas   -->
    <string name="labelEstado"> Estado </string>
    <string name="labelCapital"> Capital  </string>
    <string name="labelMapa"> Mapa  </string>


</resources>
