<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".MainContacto">

    <LinearLayout
        android:id="@+id/contBtnsOpcion"
        style="@style/btnMenu"
        android:layout_width="304dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnApoyo"
            style="?android:attr/buttonBarStyle"
            android:layout_width="3dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/communication"
            android:text="@string/btnDescrip" />

        <TextView
            android:id="@+id/labelCategorias"
            style="@style/labelTituloInterfaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelContacto" />

        <Button
            android:id="@+id/btnCategoria"
            style="?android:attr/buttonBarStyle"
            android:layout_width="3dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/grade"
            android:onClick="vistaInterfazPrincipal"
            android:text="@string/btnDescrip" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="370dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contBtnsOpcion">

        <TextView
            android:id="@+id/labelInformacionContacto"
            style="@style/labelInformacion"
            android:layout_width="324dp"
            android:layout_height="111dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/labelInformacionContacto" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/camposInterfazContacto"
        android:layout_width="303dp"
        android:layout_height="324dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelTituloContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelTituloContacto" />

            <EditText
                android:id="@+id/inpNombreContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/labelNombreContacto"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inpAsuntoContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/labelAsuntoContacto"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inpCorreoContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/labelCorreoContacto"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/inpMsjContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/labelMsjContacto"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingBottom="50dp" />

            <Button
                android:id="@+id/idEnviarCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/textBtnContacto" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>