<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".MainRetoSaber">

    <LinearLayout
        android:id="@+id/contBtnsOpcionRetoSaber"
        style="@style/btnMenu"
        android:layout_width="327dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCtegoria"
            style="?android:attr/buttonBarStyle"
            android:layout_width="3dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/grade"
            android:onClick="vistaInterfazNiveles"
            android:text="@string/btnDescrip" />

        <TextView
            android:id="@+id/labelTituloNiveles"
            style="@style/labelTituloInterfaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelTituloRetoSaber" />

        <Button
            android:id="@+id/btnApoyo"
            style="?android:attr/buttonBarStyle"
            android:layout_width="3dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/lightbulb"
            android:onClick="vistaApoyo"
            android:text="@string/btnDescrip" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/contScrollRetoSaber"
        android:layout_width="360dp"
        android:layout_height="537dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contBtnsOpcionRetoSaber"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/contLinearBtnsNiveles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/labelNivel"
                style="@style/labelTituloInterfaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFF8D" />

            <TextView
                android:id="@+id/labelCategoria"
                style="@style/labelTituloInterfaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFF8D" />

            <TextView
                android:id="@+id/idPregunta"
                style="@style/labelPreguntaRetoSaber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPreguntaDesp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>