<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/btnMenu"
        android:layout_width="229dp"
        android:layout_height="69dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn1"
            style="?android:attr/buttonBarStyle"
            android:layout_width="3dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/maths"
            android:text="@string/btnDescrip" />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonBarStyle"
            android:layout_width="3dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/communication"
            android:text="@string/btnDescrip" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonBarStyle"
            android:layout_width="3dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/lightbulb"
            android:text="@string/btnDescrip" />
    </LinearLayout>

    <ScrollView
        android:layout_width="375dp"
        android:layout_height="599dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelText_a"
                style="@style/labelBasico_Interfaz_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_a" />

            <Button
                android:id="@+id/btnGuia"
                style="@style/btnMenu"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/grade"
                android:onClick="vistaGuia"
                android:text="@string/btnDescrip" />

            <TextView
                android:id="@+id/labelText_b"
                style="@style/labelBasico_Interfaz_A"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/label_b" />

            <Button
                android:id="@+id/btnPregunta"
                style="@style/btnMenu"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/knowledge"
                android:onClick="vistaPreguntas"
                android:text="@string/btnDescrip" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>